src/snapshots/sprout__cli_tests__tests__manifest_with_git_dependency.snap
---
source: src/cli_tests.rs
expression: manifest_content
---
module ripgrep {
    depends_on = []
    fetch {
        git = {
            url = https://github.com/BurntSushi/ripgrep.git
            ref = 14.1.1
        }
    }
}
